# minGPT

./: .flake8  .pre-commit-config.yaml  mypy.ini  play_char.ipynb  pyproject.toml
mingpt/: model.py  trainer.py  utils.py
