[tool.poetry]
name = "minGPT"
version = "0.1.0"
description = ""
authors = ["Andrej Karpathy", "Sid"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.21.2"
torch = "^1.9.1"
jupyter = "^1.0.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "21.7b0"
mypy = "^0.910"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.9.3"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
pre-commit = "^2.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
'''

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100

[tool.isort]
profile = "black"
